--- a/css/style.scss
+++ b/css/style.scss
@@ -39,3 +39,53 @@
     border-color: #ffffff;
     background: #ffffff;
 }
+
+.scrolldownbutton {
+    margin: auto;
+    text-align: center;
+    margin-top: -120px;
+    margin-bottom: 20px;
+    position: relative;
+    z-index: 1;
+}
+
+.scrolldownbutton span {
+    font-size: 20px;
+}
+
+.scrolldownbutton .svg-inline--fa {
+    display: block;
+    font-size: 24px;
+    animation: arrow 2s infinite;
+    margin-bottom: -5px;
+}
+
+.scrolldownbutton .svg-inline--fa:nth-child(1) {
+    animation-delay: -1s
+}
+
+.scrolldownbutton .svg-inline--fa:nth-child(2) {
+    animation-delay: -0.5s
+}
+
+.scrolldownbutton .svg-inline--fa:nth-child(3) {
+    animation-delay: 0s
+}
+
+@keyframes arrow {
+    0% {
+        opacity: 0
+    }
+
+    40% {
+        opacity: 1
+    }
+
+    80% {
+        opacity: 0
+    }
+
+    100% {
+        opacity: 0
+    }
+}
