--- a/css/style.scss
+++ b/css/style.scss
@@ -22,6 +22,9 @@
 .project-carousel .flickity-page-dots {
     text-align: right;
 }
+.project-carousel2 .flickity-page-dots {
+    text-align: right;
+}
 
 .home-carousel .content {
     text-shadow: 2px 2px #dd3333;
