--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,27 @@
   height: 100%;
 }
 
+.image-cover {
+  position: relative;
+  overflow: hidden;
+  padding-top: 100%;
+}
+
+.image-cover img {
+  bottom: 0;
+  font-family: "object-fit: cover;";
+  height: 100%;
+  left: 0;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 50% 50%;
+  object-position: 50% 50%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+}
+
 .project-carousel .flickity-page-dots {
   text-align: right;
 }
