--- a/public/css/app.css
+++ b/public/css/app.css
@@ -714,6 +714,12 @@ video {
 .top-\[30\%\] {
   top: 30%;
 }
+.bottom-\[40px\] {
+  bottom: 40px;
+}
+.right-3 {
+  right: 0.75rem;
+}
 .z-10 {
   z-index: 10;
 }
@@ -807,6 +813,18 @@ video {
 .mt-24 {
   margin-top: 6rem;
 }
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+.ml-5 {
+  margin-left: 1.25rem;
+}
+.mt-8 {
+  margin-top: 2rem;
+}
+.mb-2\.5 {
+  margin-bottom: 0.625rem;
+}
 .line-clamp-2 {
   overflow: hidden;
   display: -webkit-box;
@@ -873,6 +891,12 @@ video {
 .h-screen {
   height: 100vh;
 }
+.h-\[120px\] {
+  height: 120px;
+}
+.h-\[200px\] {
+  height: 200px;
+}
 .w-1 {
   width: 0.25rem;
 }
@@ -898,6 +922,12 @@ video {
   width: -moz-max-content;
   width: max-content;
 }
+.w-10\/12 {
+  width: 83.333333%;
+}
+.w-2\/3 {
+  width: 66.666667%;
+}
 .min-w-\[200px\] {
   min-width: 200px;
 }
@@ -915,6 +945,9 @@ video {
 }
 .max-w-screen-2xl {
   max-width: 1536px;
+}
+.max-w-full {
+  max-width: 100%;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -1095,6 +1128,13 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-gray-200\/50 {
+  background-color: rgb(229 231 235 / 0.5);
+}
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
@@ -1111,6 +1151,12 @@ video {
 }
 .p-4 {
   padding: 1rem;
+}
+.p-5 {
+  padding: 1.25rem;
+}
+.p-7 {
+  padding: 1.75rem;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -1147,6 +1193,10 @@ video {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
 }
 .pb-4 {
   padding-bottom: 1rem;
@@ -1190,6 +1240,12 @@ video {
   font-size: 0.75rem;
   line-height: 1rem;
 }
+.text-2xl {
+  font-size: 1.7rem;
+}
+.text-\[30px\] {
+  font-size: 30px;
+}
 .font-bold {
   font-weight: 700;
 }
@@ -1210,6 +1266,9 @@ video {
 }
 .leading-tight {
   line-height: 1.25;
+}
+.leading-\[31\.5px\] {
+  line-height: 31.5px;
 }
 .text-black\/60 {
   color: rgb(0 0 0 / 0.6);
@@ -1316,11 +1375,25 @@ video {
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
+.\*\:my-6 > * {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
 .\*\:mb-1\.5 > * {
   margin-bottom: 0.375rem;
 }
+.\*\:border-b > * {
+  border-bottom-width: 1px;
+}
+.\*\:px-3 > * {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
 .last\:border-b-0:last-child {
   border-bottom-width: 0px;
+}
+.last\:\*\:border-0 > *:last-child {
+  border-width: 0px;
 }
 .hover\:border-black:hover {
   --tw-border-opacity: 1;
@@ -1384,6 +1457,10 @@ video {
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.hover\:\*\:text-primary-500 > *:hover {
+  --tw-text-opacity: 1;
+  color: rgb(1 86 178 / var(--tw-text-opacity));
+}
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -1435,6 +1512,10 @@ video {
   color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 @media (min-width: 768px) {
+
+  .md\:left-\[100px\] {
+    left: 100px;
+  }
 
   .md\:order-1 {
     order: 1;
@@ -1508,6 +1589,10 @@ video {
 
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:w-5\/12 {
+    width: 41.666667%;
   }
 
   .lg\:max-w-\[25\%\] {
