--- a/public/css/app.css
+++ b/public/css/app.css
@@ -562,6 +562,11 @@ video {
   font-size: 1.7rem;
   font-weight: 700;
 }
+.pdf-viewer {
+        border: 1px solid black;
+        width: -moz-max-content;
+        width: max-content;
+    }
 .wy {
         width: 100%;
     //max-width: 640px;
@@ -771,6 +776,18 @@ video {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
 .\!mt-0 {
   margin-top: 0px !important;
 }
@@ -825,6 +842,12 @@ video {
 .mb-2\.5 {
   margin-bottom: 0.625rem;
 }
+.mr-3 {
+  margin-right: 0.75rem;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
 .line-clamp-2 {
   overflow: hidden;
   display: -webkit-box;
@@ -848,6 +871,9 @@ video {
 }
 .inline-flex {
   display: inline-flex;
+}
+.table {
+  display: table;
 }
 .grid {
   display: grid;
@@ -897,6 +923,21 @@ video {
 .h-\[200px\] {
   height: 200px;
 }
+.h-\[80px\] {
+  height: 80px;
+}
+.h-10 {
+  height: 2.5rem;
+}
+.h-32 {
+  height: 8rem;
+}
+.h-12 {
+  height: 3rem;
+}
+.max-h-\[480px\] {
+  max-height: 480px;
+}
 .w-1 {
   width: 0.25rem;
 }
@@ -927,6 +968,12 @@ video {
 }
 .w-2\/3 {
   width: 66.666667%;
+}
+.w-\[100px\] {
+  width: 100px;
+}
+.w-4 {
+  width: 1rem;
 }
 .min-w-\[200px\] {
   min-width: 200px;
@@ -984,6 +1031,12 @@ video {
 .cursor-pointer {
   cursor: pointer;
 }
+.resize {
+  resize: both;
+}
+.list-disc {
+  list-style-type: disc;
+}
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -992,6 +1045,9 @@ video {
 }
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -1020,6 +1076,9 @@ video {
 .gap-8 {
   gap: 2rem;
 }
+.gap-6 {
+  gap: 1.5rem;
+}
 .-space-x-px > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(-1px * var(--tw-space-x-reverse));
@@ -1039,6 +1098,9 @@ video {
   --tw-divide-opacity: 1;
   border-color: rgb(249 250 251 / var(--tw-divide-opacity));
 }
+.overflow-auto {
+  overflow: auto;
+}
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1056,6 +1118,9 @@ video {
 }
 .rounded-md {
   border-radius: 0.375rem;
+}
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 .rounded-e-lg {
   border-start-end-radius: 0.5rem;
@@ -1086,6 +1151,12 @@ video {
 .border-e-0 {
   border-inline-end-width: 0px;
 }
+.border-dashed {
+  border-style: dashed;
+}
+.border-dotted {
+  border-style: dotted;
+}
 .border-blue-300 {
   --tw-border-opacity: 1;
   border-color: rgb(147 197 253 / var(--tw-border-opacity));
@@ -1097,6 +1168,18 @@ video {
 .border-primary-500 {
   --tw-border-opacity: 1;
   border-color: rgb(1 86 178 / var(--tw-border-opacity));
+}
+.border-gray-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(17 24 39 / var(--tw-border-opacity));
+}
+.border-gray-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(55 65 81 / var(--tw-border-opacity));
+}
+.border-primary-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(1 69 142 / var(--tw-border-opacity));
 }
 .bg-blue-50 {
   --tw-bg-opacity: 1;
@@ -1135,6 +1218,17 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
+.bg-\[gray\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(128 128 128 / var(--tw-bg-opacity));
+}
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+.bg-opacity-20 {
+  --tw-bg-opacity: 0.2;
+}
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
@@ -1157,6 +1251,9 @@ video {
 }
 .p-7 {
   padding: 1.75rem;
+}
+.p-6 {
+  padding: 1.5rem;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -1198,11 +1295,29 @@ video {
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
 }
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 .pb-4 {
   padding-bottom: 1rem;
 }
 .pt-1 {
   padding-top: 0.25rem;
+}
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+.text-left {
+  text-align: left;
 }
 .text-center {
   text-align: center;
@@ -1257,6 +1372,9 @@ video {
 }
 .font-semibold {
   font-weight: 600;
+}
+.font-normal {
+  font-weight: 400;
 }
 .uppercase {
   text-transform: uppercase;
@@ -1317,6 +1435,18 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-primary-700 {
+  --tw-text-opacity: 1;
+  color: rgb(1 69 142 / var(--tw-text-opacity));
+}
+.text-\[\#666\] {
+  --tw-text-opacity: 1;
+  color: rgb(102 102 102 / var(--tw-text-opacity));
+}
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
 .opacity-0 {
   opacity: 0;
 }
@@ -1335,6 +1465,10 @@ video {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 .ring-1 {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -1379,15 +1513,39 @@ video {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
+.\*\:my-2\.5 > * {
+  margin-top: 0.625rem;
+  margin-bottom: 0.625rem;
+}
+.\*\:my-4 > * {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
 .\*\:mb-1\.5 > * {
   margin-bottom: 0.375rem;
+}
+.\*\:border > * {
+  border-width: 1px;
 }
 .\*\:border-b > * {
   border-bottom-width: 1px;
 }
+.\*\:p-2 > * {
+  padding: 0.5rem;
+}
 .\*\:px-3 > * {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+.\*\:py-2\.5 > * {
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+}
+.\*\:text-xl > * {
+  font-size: 1.25rem;
+}
+.\*\:font-normal > * {
+  font-weight: 400;
 }
 .last\:border-b-0:last-child {
   border-bottom-width: 0px;
@@ -1418,6 +1576,10 @@ video {
 .hover\:bg-primary-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(1 86 178 / var(--tw-bg-opacity));
+}
+.hover\:bg-primary-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(1 74 152 / var(--tw-bg-opacity));
 }
 .hover\:text-black:hover {
   --tw-text-opacity: 1;
@@ -1476,6 +1638,9 @@ video {
 .focus\:ring-indigo-500:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
+}
+.disabled\:opacity-50:disabled {
+  opacity: 0.5;
 }
 .group\/lv1:hover .group-hover\/lv1\:block {
   display: block;
@@ -1581,6 +1746,14 @@ video {
 
   .lg\:col-span-9 {
     grid-column: span 9 / span 9;
+  }
+
+  .lg\:col-span-5 {
+    grid-column: span 5 / span 5;
+  }
+
+  .lg\:col-span-7 {
+    grid-column: span 7 / span 7;
   }
 
   .lg\:flex {
