--- a/public/css/app.css
+++ b/public/css/app.css
@@ -701,6 +701,9 @@ video {
 .bottom-0 {
   bottom: 0px;
 }
+.bottom-\[40px\] {
+  bottom: 40px;
+}
 .left-0 {
   left: 0px;
 }
@@ -710,6 +713,9 @@ video {
 .right-1 {
   right: 0.25rem;
 }
+.right-3 {
+  right: 0.75rem;
+}
 .top-0 {
   top: 0px;
 }
@@ -718,12 +724,6 @@ video {
 }
 .top-\[30\%\] {
   top: 30%;
-}
-.bottom-\[40px\] {
-  bottom: 40px;
-}
-.right-3 {
-  right: 0.75rem;
 }
 .z-10 {
   z-index: 10;
@@ -756,6 +756,14 @@ video {
   margin-top: -0.5rem;
   margin-bottom: -0.5rem;
 }
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -763,6 +771,10 @@ video {
 .my-1 {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
+}
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 .my-12 {
   margin-top: 3rem;
@@ -776,17 +788,9 @@ video {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-.mx-6 {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 .\!mt-0 {
   margin-top: 0px !important;
@@ -802,6 +806,12 @@ video {
 }
 .mb-10 {
   margin-bottom: 2.5rem;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+.mb-2\.5 {
+  margin-bottom: 0.625rem;
 }
 .mb-4 {
   margin-bottom: 1rem;
@@ -821,6 +831,12 @@ video {
 .ml-2 {
   margin-left: 0.5rem;
 }
+.ml-5 {
+  margin-left: 1.25rem;
+}
+.mr-3 {
+  margin-right: 0.75rem;
+}
 .ms-0 {
   margin-inline-start: 0px;
 }
@@ -830,23 +846,8 @@ video {
 .mt-24 {
   margin-top: 6rem;
 }
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-.ml-5 {
-  margin-left: 1.25rem;
-}
 .mt-8 {
   margin-top: 2rem;
-}
-.mb-2\.5 {
-  margin-bottom: 0.625rem;
-}
-.mr-3 {
-  margin-right: 0.75rem;
-}
-.mb-2 {
-  margin-bottom: 0.5rem;
 }
 .line-clamp-2 {
   overflow: hidden;
@@ -893,11 +894,20 @@ video {
 .aspect-\[9\/10\] {
   aspect-ratio: 9/10;
 }
+.h-10 {
+  height: 2.5rem;
+}
+.h-12 {
+  height: 3rem;
+}
 .h-16 {
   height: 4rem;
 }
 .h-2\.5 {
   height: 0.625rem;
+}
+.h-32 {
+  height: 8rem;
 }
 .h-4\/5 {
   height: 80%;
@@ -911,29 +921,26 @@ video {
 .h-8 {
   height: 2rem;
 }
-.h-full {
-  height: 100%;
-}
-.h-screen {
-  height: 100vh;
-}
 .h-\[120px\] {
   height: 120px;
 }
 .h-\[200px\] {
   height: 200px;
 }
+.h-\[75px\] {
+  height: 75px;
+}
 .h-\[80px\] {
   height: 80px;
 }
-.h-10 {
-  height: 2.5rem;
+.h-full {
+  height: 100%;
 }
-.h-32 {
-  height: 8rem;
+.h-screen {
+  height: 100vh;
 }
-.h-12 {
-  height: 3rem;
+.h-\[30px\] {
+  height: 30px;
 }
 .max-h-\[480px\] {
   max-height: 480px;
@@ -941,11 +948,20 @@ video {
 .w-1 {
   width: 0.25rem;
 }
+.w-10\/12 {
+  width: 83.333333%;
+}
 .w-16 {
   width: 4rem;
 }
 .w-2\.5 {
   width: 0.625rem;
+}
+.w-2\/3 {
+  width: 66.666667%;
+}
+.w-4 {
+  width: 1rem;
 }
 .w-4\/5 {
   width: 80%;
@@ -956,6 +972,9 @@ video {
 .w-6 {
   width: 1.5rem;
 }
+.w-\[100px\] {
+  width: 100px;
+}
 .w-full {
   width: 100%;
 }
@@ -963,23 +982,17 @@ video {
   width: -moz-max-content;
   width: max-content;
 }
-.w-10\/12 {
-  width: 83.333333%;
-}
-.w-2\/3 {
-  width: 66.666667%;
-}
-.w-\[100px\] {
-  width: 100px;
-}
-.w-4 {
-  width: 1rem;
+.w-\[500px\] {
+  width: 500px;
 }
 .min-w-\[200px\] {
   min-width: 200px;
 }
 .max-w-2xl {
   max-width: 42rem;
+}
+.max-w-5xl {
+  max-width: 64rem;
 }
 .max-w-\[260px\] {
   max-width: 260px;
@@ -990,11 +1003,11 @@ video {
 .max-w-\[750px\] {
   max-width: 750px;
 }
-.max-w-screen-2xl {
-  max-width: 1536px;
-}
 .max-w-full {
   max-width: 100%;
+}
+.max-w-screen-2xl {
+  max-width: 1536px;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -1049,6 +1062,9 @@ video {
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
+.flex-row {
+  flex-direction: row;
+}
 .flex-col {
   flex-direction: column;
 }
@@ -1073,11 +1089,11 @@ video {
 .gap-4 {
   gap: 1rem;
 }
-.gap-8 {
-  gap: 2rem;
-}
 .gap-6 {
   gap: 1.5rem;
+}
+.gap-8 {
+  gap: 2rem;
 }
 .-space-x-px > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -1106,6 +1122,12 @@ video {
 }
 .overflow-y-auto {
   overflow-y: auto;
+}
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+.whitespace-nowrap {
+  white-space: nowrap;
 }
 .rounded {
   border-radius: 0.25rem;
@@ -1151,9 +1173,6 @@ video {
 .border-e-0 {
   border-inline-end-width: 0px;
 }
-.border-dashed {
-  border-style: dashed;
-}
 .border-dotted {
   border-style: dotted;
 }
@@ -1161,25 +1180,37 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(147 197 253 / var(--tw-border-opacity));
 }
+.border-gray-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
+}
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-.border-primary-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(1 86 178 / var(--tw-border-opacity));
-}
-.border-gray-900 {
-  --tw-border-opacity: 1;
-  border-color: rgb(17 24 39 / var(--tw-border-opacity));
 }
 .border-gray-700 {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
 }
+.border-gray-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(17 24 39 / var(--tw-border-opacity));
+}
+.border-primary-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(1 86 178 / var(--tw-border-opacity));
+}
 .border-primary-700 {
   --tw-border-opacity: 1;
   border-color: rgb(1 69 142 / var(--tw-border-opacity));
+}
+.bg-\[gray\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(128 128 128 / var(--tw-bg-opacity));
+}
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .bg-blue-50 {
   --tw-bg-opacity: 1;
@@ -1191,6 +1222,13 @@ video {
 }
 .bg-gray-100\/50 {
   background-color: rgb(243 244 246 / 0.5);
+}
+.bg-gray-200\/50 {
+  background-color: rgb(229 231 235 / 0.5);
+}
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 .bg-gray-50 {
   --tw-bg-opacity: 1;
@@ -1210,21 +1248,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-gray-200\/50 {
-  background-color: rgb(229 231 235 / 0.5);
-}
-.bg-gray-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-.bg-\[gray\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(128 128 128 / var(--tw-bg-opacity));
-}
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .bg-opacity-20 {
   --tw-bg-opacity: 0.2;
@@ -1249,11 +1272,11 @@ video {
 .p-5 {
   padding: 1.25rem;
 }
-.p-7 {
-  padding: 1.75rem;
-}
 .p-6 {
   padding: 1.5rem;
+}
+.p-7 {
+  padding: 1.75rem;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -1267,6 +1290,14 @@ video {
   padding-left: 1rem;
   padding-right: 1rem;
 }
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 .py-0 {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -1278,6 +1309,10 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 .py-4 {
   padding-top: 1rem;
@@ -1291,21 +1326,8 @@ video {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
 }
-.py-1\.5 {
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
-}
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+.pb-10 {
+  padding-bottom: 2.5rem;
 }
 .pb-4 {
   padding-bottom: 1rem;
@@ -1313,8 +1335,11 @@ video {
 .pt-1 {
   padding-top: 0.25rem;
 }
-.pb-10 {
-  padding-bottom: 2.5rem;
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+.pb-1 {
+  padding-bottom: 0.25rem;
 }
 .text-left {
   text-align: left;
@@ -1322,14 +1347,14 @@ video {
 .text-center {
   text-align: center;
 }
-.font-sans {
-  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+.font-svn {
+  font-family: SVN Gilroy, sans-serif, serif;
 }
 .font-svn-medium {
   font-family: SVN Medium, sans-serif, serif;
 }
-.font-svn {
-  font-family: SVN Gilroy, sans-serif, serif;
+.text-2xl {
+  font-size: 1.7rem;
 }
 .text-3xl {
   font-size: 1.875rem;
@@ -1338,6 +1363,15 @@ video {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+.text-\[20px\] {
+  font-size: 20px;
+}
+.text-\[30px\] {
+  font-size: 30px;
+}
+.text-\[34px\] {
+  font-size: 34px;
 }
 .text-base {
   font-size: 1rem;
@@ -1355,26 +1389,17 @@ video {
   font-size: 0.75rem;
   line-height: 1rem;
 }
-.text-2xl {
-  font-size: 1.7rem;
-}
-.text-\[30px\] {
-  font-size: 30px;
-}
 .font-bold {
   font-weight: 700;
-}
-.font-light {
-  font-weight: 300;
 }
 .font-medium {
   font-weight: 500;
 }
-.font-semibold {
-  font-weight: 600;
-}
 .font-normal {
   font-weight: 400;
+}
+.font-semibold {
+  font-weight: 600;
 }
 .uppercase {
   text-transform: uppercase;
@@ -1382,11 +1407,15 @@ video {
 .leading-8 {
   line-height: 2rem;
 }
+.leading-\[31\.5px\] {
+  line-height: 31.5px;
+}
 .leading-tight {
   line-height: 1.25;
 }
-.leading-\[31\.5px\] {
-  line-height: 31.5px;
+.text-\[\#666\] {
+  --tw-text-opacity: 1;
+  color: rgb(102 102 102 / var(--tw-text-opacity));
 }
 .text-black\/60 {
   color: rgb(0 0 0 / 0.6);
@@ -1394,6 +1423,10 @@ video {
 .text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 .text-gray-300 {
   --tw-text-opacity: 1;
@@ -1431,21 +1464,17 @@ video {
   --tw-text-opacity: 1;
   color: rgb(1 86 178 / var(--tw-text-opacity));
 }
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
 .text-primary-700 {
   --tw-text-opacity: 1;
   color: rgb(1 69 142 / var(--tw-text-opacity));
 }
-.text-\[\#666\] {
+.text-red-500 {
   --tw-text-opacity: 1;
-  color: rgb(102 102 102 / var(--tw-text-opacity));
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
-.text-gray-200 {
+.text-white {
   --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .opacity-0 {
   opacity: 0;
@@ -1509,10 +1538,6 @@ video {
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
-.\*\:my-6 > * {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-}
 .\*\:my-2\.5 > * {
   margin-top: 0.625rem;
   margin-bottom: 0.625rem;
@@ -1521,17 +1546,18 @@ video {
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+.\*\:my-6 > * {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
 .\*\:mb-1\.5 > * {
   margin-bottom: 0.375rem;
 }
-.\*\:border > * {
-  border-width: 1px;
+.\*\:mb-4 > * {
+  margin-bottom: 1rem;
 }
 .\*\:border-b > * {
   border-bottom-width: 1px;
-}
-.\*\:p-2 > * {
-  padding: 0.5rem;
 }
 .\*\:px-3 > * {
   padding-left: 0.75rem;
@@ -1540,12 +1566,6 @@ video {
 .\*\:py-2\.5 > * {
   padding-top: 0.625rem;
   padding-bottom: 0.625rem;
-}
-.\*\:text-xl > * {
-  font-size: 1.25rem;
-}
-.\*\:font-normal > * {
-  font-weight: 400;
 }
 .last\:border-b-0:last-child {
   border-bottom-width: 0px;
@@ -1581,6 +1601,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(1 74 152 / var(--tw-bg-opacity));
 }
+.hover\:text-\[\#222\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(34 34 34 / var(--tw-text-opacity));
+}
 .hover\:text-black:hover {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
@@ -1608,6 +1632,11 @@ video {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.hover\:shadow-2xl:hover {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
@@ -1690,6 +1719,10 @@ video {
     order: 2;
   }
 
+  .md\:col-span-12 {
+    grid-column: span 12 / span 12;
+  }
+
   .md\:col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -1740,12 +1773,16 @@ video {
     top: 50%;
   }
 
+  .lg\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
   .lg\:col-span-3 {
     grid-column: span 3 / span 3;
   }
 
-  .lg\:col-span-9 {
-    grid-column: span 9 / span 9;
+  .lg\:col-span-4 {
+    grid-column: span 4 / span 4;
   }
 
   .lg\:col-span-5 {
@@ -1756,12 +1793,20 @@ video {
     grid-column: span 7 / span 7;
   }
 
+  .lg\:col-span-9 {
+    grid-column: span 9 / span 9;
+  }
+
   .lg\:flex {
     display: flex;
   }
 
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:max-h-\[480px\] {
+    max-height: 480px;
   }
 
   .lg\:w-5\/12 {
@@ -1774,6 +1819,14 @@ video {
 
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
   }
 
   .lg\:py-0 {
@@ -1790,16 +1843,12 @@ video {
     line-height: 2.25rem;
   }
 
-  .lg\:text-xl {
-    font-size: 1.25rem;
-  }
-
-  .lg\:text-\[18px\] {
-    font-size: 18px;
-  }
-
   .lg\:text-lg {
     font-size: 110%;
+  }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
   }
 
   .lg\:opacity-0 {
