--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1341,6 +1341,9 @@ video {
 .pb-1 {
   padding-bottom: 0.25rem;
 }
+.pl-5 {
+  padding-left: 1.25rem;
+}
 .text-left {
   text-align: left;
 }
@@ -1766,6 +1769,10 @@ video {
 
   .md\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
   }
 
   .md\:text-3xl {
