--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 @layer base {
+    body {
+        -webkit-font-smoothing: antialiased;
+    }
     @font-face {
         font-family: 'SVN Gilroy';
         src: url(/fonts/SVN-Gilroy-Regular.otf);
