--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1038,6 +1038,18 @@ video {
 .max-w-screen-2xl {
   max-width: 1536px;
 }
+.max-w-\[33\%\] {
+  max-width: 33%;
+}
+.max-w-\[33\.33\%\] {
+  max-width: 33.33%;
+}
+.max-w-\[1\/2\] {
+  max-width: 1/2;
+}
+.max-w-\[50\%\] {
+  max-width: 50%;
+}
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -1835,6 +1847,14 @@ video {
     max-width: 35%;
   }
 
+  .md\:max-w-\[33\.33\%\] {
+    max-width: 33.33%;
+  }
+
+  .md\:max-w-\[50\%\] {
+    max-width: 50%;
+  }
+
   .md\:grid-cols-12 {
     grid-template-columns: repeat(12, minmax(0, 1fr));
   }
@@ -1910,6 +1930,14 @@ video {
     max-width: 25%;
   }
 
+  .lg\:max-w-\[1\/3\] {
+    max-width: 1/3;
+  }
+
+  .lg\:max-w-\[33\.33\%\] {
+    max-width: 33.33%;
+  }
+
   .lg\:grid-cols-12 {
     grid-template-columns: repeat(12, minmax(0, 1fr));
   }
@@ -1956,6 +1984,12 @@ video {
     --tw-scale-x: 1.1;
     --tw-scale-y: 1.1;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+}
+@media (min-width: 1280px) {
+
+  .xl\:max-w-\[33\.33\%\] {
+    max-width: 33.33%;
   }
 }
 .rtl\:rotate-180:where([dir="rtl"], [dir="rtl"] *) {
