--- a/public/css/app.css
+++ b/public/css/app.css
@@ -559,6 +559,52 @@ video {
     max-width: 1536px;
   }
 }
+.ck-content {
+        & .text-tiny {
+            font-size: .7em;
+        }
+
+        & .text-small {
+            font-size: .85em;
+        }
+
+        & .text-big {
+    font-size: 1.25rem;
+  }
+
+        & .text-big {
+    font-weight: 500;
+  }
+
+        & .text-huge {
+    font-size: 1.7rem;
+  }
+
+        & .text-huge {
+    font-weight: 500;
+  }
+
+        & p {
+    margin-bottom: 1rem;
+  }
+
+        & ul {
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+  }
+
+        & ul {
+    list-style-type: disc;
+  }
+
+        & ul {
+
+            li {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
+        }
+    }
 .post_cat_title {
   margin-bottom: 1rem;
   font-family: SVN Medium, sans-serif, serif;
@@ -1244,6 +1290,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
+.bg-blue-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
+}
 .bg-blue-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 246 255 / var(--tw-bg-opacity));
@@ -1280,18 +1330,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-blue-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
-}
-.bg-blue-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
-}
-.bg-blue-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
 }
 .bg-opacity-20 {
   --tw-bg-opacity: 0.2;
@@ -1871,10 +1909,6 @@ video {
   .sm\:justify-center {
     justify-content: center;
   }
-
-  .sm\:justify-between {
-    justify-content: space-between;
-  }
 }
 @media (min-width: 768px) {
 
@@ -2122,3 +2156,5 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+
+
